--- a/views/user/update.ejs
+++ b/views/user/update.ejs
@@ -47,6 +47,12 @@
     </div>
   </div>
 
+  <div class="form-group">
+    <div class="col-lg-8 col-lg-offset-2">
+      <a class="btn"  role="button" href="/password/edit">Change Password</a>
+    </div>
+  </div>
+
   <input id="address" type="hidden" name="address">
 </form>
 
